[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_file_combiner"
version = "0.3.0"
authors = [
    { name="Maximilian Winter", email="maximilian.winter.91@gmail.com" },
]
description = "A tool to combine files in a folder for LLM processing"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Maximilian-Winter/file_combiner"
"Bug Tracker" = "https://github.com/Maximilian-Winter/file_combiner/issues"

[project.scripts]
file-combiner = "file_combiner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_combiner*"]